added Modular Armor and Armor Modifier

--- a/src/main/resources/assets/modulararmor/lang/en_us.json
+++ b/src/main/resources/assets/modulararmor/lang/en_us.json
@@ -1,3 +1,10 @@
 {
-  "item.modulararmor.test_item": "Test Item"
+  "item.modulararmor.test_item": "Test Item",
+
+  "item.modulararmor.modular_helmet": "Modular Helmet",
+  "item.modulararmor.modular_chestplate": "Modular Chestplate",
+  "item.modulararmor.modular_leggins": "Modular Leggins",
+  "item.modulararmor.modular_boots": "Modular Boots",
+
+  "block.modulararmor.armor_modifier": "Armor Modifier"
 }
