added armor textures, centered gui changed armor slot to RestrictedInputSlot

--- a/src/main/resources/assets/modulararmor/lang/en_us.json
+++ b/src/main/resources/assets/modulararmor/lang/en_us.json
@@ -3,7 +3,7 @@
 
   "item.modulararmor.modular_helmet": "Modular Helmet",
   "item.modulararmor.modular_chestplate": "Modular Chestplate",
-  "item.modulararmor.modular_leggins": "Modular Leggins",
+  "item.modulararmor.modular_leggings": "Modular Leggings",
   "item.modulararmor.modular_boots": "Modular Boots",
 
   "block.modulararmor.armor_modifier": "Armor Modifier"
