--- a/src/main/resources/assets/modulararmor/lang/de_de.json
+++ b/src/main/resources/assets/modulararmor/lang/de_de.json
@@ -1,5 +1,6 @@
 {
   "item.modulararmor.test_item": "Test Gegenstand",
+  "item.modulararmor.basic_battery": "Einfache Batterie",
 
   "item.modulararmor.modular_helmet": "Modularer Helm",
   "item.modulararmor.modular_chestplate": "Modulare Brustplatte",
