--- a/src/main/resources/assets/modulararmor/lang/en_us.json
+++ b/src/main/resources/assets/modulararmor/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.modulararmor.test_item": "Test Item",
+  "item.modulararmor.basic_battery": "Basic Battery",
 
   "item.modulararmor.modular_helmet": "Modular Helmet",
   "item.modulararmor.modular_chestplate": "Modular Chestplate",
