added 2 upgrades and added armor slots to ArmorModifier

--- a/src/main/resources/assets/modulararmor/lang/de_de.json
+++ b/src/main/resources/assets/modulararmor/lang/de_de.json
@@ -2,6 +2,8 @@
   "item.modulararmor.test_item": "Test Gegenstand",
   "item.modulararmor.basic_battery": "Einfache Batterie",
 
+  "item.modulararmor.elytra_upgrade": "Elytra Upgrade",
+
   "item.modulararmor.modular_helmet": "Modularer Helm",
   "item.modulararmor.modular_chestplate": "Modulare Brustplatte",
   "item.modulararmor.modular_leggings": "Modulare Hose",
