--- a/src/main/resources/assets/modulararmor/lang/en_us.json
+++ b/src/main/resources/assets/modulararmor/lang/en_us.json
@@ -2,6 +2,8 @@
   "item.modulararmor.test_item": "Test Item",
   "item.modulararmor.basic_battery": "Basic Battery",
 
+  "item.modulararmor.elytra_upgrade": "Elytry Upgrade",
+
   "item.modulararmor.modular_helmet": "Modular Helmet",
   "item.modulararmor.modular_chestplate": "Modular Chestplate",
   "item.modulararmor.modular_leggings": "Modular Leggings",
